# Website

./: .env  .env.example  LICENSE  docker-compose.dev.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev
backend/src/: auth.rs  background.rs  handlers.rs  main.rs  models.rs  utils.rs
website/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
website/src/: App.svelte  app.css
website/src/assets/Clans/Clash Royale/: Unconfirmed 312490.crdownload
website/src/lib/: AdminPage.svelte  AllClansAdminPage.svelte  CRClanDetailPage.svelte  CWLPage.svelte  ClanCard.svelte  ClanDetailPage.svelte  ClansPage.svelte  ClansSection.svelte  DiscordCard.svelte  DiscordSection.svelte  FeaturesSection.svelte  Footer.svelte  Header.svelte  Hero.svelte  MyClansPage.svelte  PlayerDetailModal.svelte  ProfilePage.svelte  ThemeToggle.svelte  auth.ts
