[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
oauth2 = "4.4"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json"] }
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11.8"
percent-encoding = "2.3"
